<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_statement">Welcome To ShoeStore App , press next to show instruction.</string>
    <string name="next">next</string>
    <string name="Instructions">Instructions</string>
    <string name="instructions_statement">when you press next you see shoes and you can add shoe item by press in + button and type shoe details</string>
    <string name="Add_shoe">Add Shoe</string>
    <string name="description">description</string>
    <string name="company">company</string>
    <string name="size">size</string>
    <string name="name">name</string>
</resources>
