<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!--used LinearLayout since its simple layout has 2 textview and a button -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.fragments.InstructionScreen">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Instructions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/instructions_statement" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:text="@string/next" />


    </LinearLayout>
</layout>